fix spacing around uniform titles

--- a/app/assets/stylesheets/catalog.css.scss
+++ b/app/assets/stylesheets/catalog.css.scss
@@ -121,6 +121,11 @@ a.scan {
   display:inline;
 }
 
+.biglink {
+  padding: 0;
+  margin: 0;
+}
+
 .progressive-link {
   text-decoration: underline;
 }
